# RCD

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml  example.yaml
crcdm/: __init__.py
crcdm/config/: __init__.py  io.py
crcdm/data/: __init__.py  build_dataset.py  dataset.py
crcdm/evaluation/: __init__.py  evaluate.py
crcdm/models/: __init__.py  crcdm.py
crcdm/training/: __init__.py  train.py
crcdm/utils/: __init__.py  metrics.py
examples/data/: sample_index.csv  sample_summary.json
examples/data/processed/artifacts/: road_graph.pkl
scripts/: evaluate.sh  run_all.sh  run_example.sh  train.sh
tests/: helpers.py  test_config.py  test_data_features.py  test_dataset_build.py  test_evaluation.py  test_model.py
trdmu/: __init__.py
trdmu/config/: io.py
trdmu/data/: __init__.py  build_dataset.py  dataset.py
trdmu/evaluation/: evaluate.py
trdmu/models/: __init__.py  trdmu.py
trdmu/training/: __init__.py  train.py
trdmu/utils/: metrics.py
