[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crcdm"
version = "0.2.0"
description = "Causality-aware robust road closure detection under external perturbations"
requires-python = ">=3.9"
dependencies = [
    "networkx",
    "numpy",
    "pandas",
    "PyYAML",
    "scikit-learn",
    "torch",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["trdmu*"]
