[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crcdm"
version = "1.0.0"
description = "Causality-aware robust road closure detection under external perturbations"
requires-python = ">=3.9"
dependencies = [
    "networkx",
    "numpy",
    "pandas",
    "PyYAML",
    "scikit-learn",
    "torch",
]

[tool.setuptools.packages.find]
include = ["crcdm*"]
